objects/hic_signeasy__Sign_Business_Unit__c.object
<CustomObject>
    <fields>
        <fullName>hic_signeasy__BusinessUnitDefaultActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Unit Default Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Business_Unit_Logo_url__c</fullName>
        <label>Business Unit Logo url</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Business_Unit_Name__c</fullName>
        <label>Business Unit Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>hic_signeasy__Business_Unit_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Unit Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Company_Information__c</fullName>
        <label>Company Information</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__EmailDisplayNameTextTemplate__c</fullName>
        <label>Email Display Name Text Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Recipient_Email_Notifications__c</fullName>
        <label>Recipient Email Notifications</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__SendOnBehalfOfReplyToEmail__c</fullName>
        <label>Send on Behalf of Reply-To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Send_on_Behalf_of_Name__c</fullName>
        <label>Send on Behalf of Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Sender_Email_Notifications__c</fullName>
        <label>Sender Email Notifications</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Subject__c</fullName>
        <label>Subject</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__UID__c</fullName>
        <label>UID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sign Business Unit</label>
    <listViews>
        <fullName>hic_signeasy__All</fullName>
        <columns>NAME</columns>
        <columns>hic_signeasy__Business_Unit_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sign Business Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>